Refactor Dockerfile for multi-stage build and user setup
Signed-off-by: Piyush2679 <155120175+Piyush2679@users.noreply.github.com>